# BattleshipPuzzle

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
html/: annotated.html  class_board-members.html  class_board.html  class_manager-members.html  class_manager.html  class_ship-members.html  class_ship.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  file_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  helper_8h_source.html  index.html  manager_8h_source.html  ships_8h_source.html  types_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
include/: boats.h  file.h  helper.h  manager.h  ships.h  table.h  types.h  verify.h
src/: boats.cpp  file.cpp  helper.cpp  main.cpp  ships.cpp  table.cpp  verify.cpp
